--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
 	<link rel="stylesheet" type="text/css" href="css/lumx.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+	<!--jquery-latest.min.js-->
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+	<!--angular.min.js-->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0-beta.5/angular.min.js"></script>
+	<!--angular-resource.min.js-->
+	<script src="https://code.angularjs.org/1.4.1/angular-resource.min.js"></script>
 	<script src="https://code.angularjs.org/1.4.0-beta.5/angular-route.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.2/velocity.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment-with-locales.min.js"></script>
